--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Christmas Markets open to the public located in Castleisland, Co. Kerry, Ireland">
     <meta name="keywords" content="christmas, market, christmas market, food, fun, family, decorations, santa, castleisland, kerry">
-
+    <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
     
     <title>Castleisland Christmas Markets</title>
 </head>
 <body>
-    
+    <header>
+        <a href="index.html" >
+            <img src="assets/images/Christmas Market Logo.png" alt="Castleisland Christmas Market Logo">
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Festivities</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Competition</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>Christmas Market main image for home page</section>
+    <section>Brief synopsis plus 2 divs with button links to other pages of website</section>
+    <section>Map</section>
+    <footer>Contact Info and Social Media links</footer>
 </body>
 </html>
