Update logo image and height

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html" >
-            <img src="assets/images/Christmas Market Logo.png" alt="Castleisland Christmas Market Logo">
+            <img src="assets/images/CASTLEISLAND CHRISTMAS MARKETS LOGO.png" alt="Castleisland Christmas Market Logo" id="logo">
         </a>
         <nav>
             <ul>
