Add flexbox styles to header and nav menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="assets/images/CASTLEISLAND CHRISTMAS MARKETS LOGO.png" alt="Castleisland Christmas Market Logo" id="logo">
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
