Update  and style av links ain header

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </a>
         <nav>
             <ul id="menu">
-                <li>
-                    <a href="index.html">Home</a>
+                <li class="border-right">
+                    <a href="index.html" class="active">Home</a>
                 </li>
-                <li>
+                <li class="border-right">
                     <a href="#">Festivities</a>
                 </li>
-                <li>
+                <li class="border-right">
                     <a href="#">Gallery</a>
                 </li>
                 <li>
