Add the index main image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html" >
-            <img src="assets/images/CASTLEISLAND CHRISTMAS MARKETS LOGO.png" alt="Castleisland Christmas Market Logo" id="logo">
+            <img src="assets/images/castleisland-christmas-market-logo.png" alt="Castleisland Christmas Market Logo" id="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -33,7 +33,9 @@
             </ul>
         </nav>
     </header>
-    <section>Christmas Market main image for home page</section>
+    <section>
+        <div id="index-main-image"></div>
+    </section>
     <section>Brief synopsis plus 2 divs with button links to other pages of website</section>
     <section>Map</section>
     <footer>Contact Info and Social Media links</footer>
