Add image slogan text and styling

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="main-image-outer">
         <div id="index-main-image"></div>
+        <div id="image-slogan">
+            <h2>A Christmas Experience like no other</h2>
+        </div>
     </section>
     <section>Brief synopsis plus 2 divs with button links to other pages of website</section>
     <section>Map</section>
