Add div elements to info and pathway section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
             <h2>A Christmas Experience like no other</h2>
         </div>
     </section>
-    <section>Brief synopsis plus 2 divs with button links to other pages of website</section>
+    <section id="info-plus-pathway-section">
+        <div id="info-div">Left</div>
+        <div id="festivities-div">Right</div>
+        <div id="competition-div">Center</div>
+    </section>
     <section>Map</section>
     <footer>Contact Info and Social Media links</footer>
 </body>
