Add and style info div

--- a/index.html
+++ b/index.html
@@ -40,11 +40,24 @@
         </div>
     </section>
     <section id="info-plus-pathway-section">
-        <div id="info-div">Left</div>
+        <div id="info-div">
+            <h1 class="info-div-headings">Castleisland Christmas Market</h1>
+            <h3 class="info-div-headings">
+                <i class="fa-regular fa-calendar-days"></i>
+                25/11/2022 - 23/12/2022
+            </h3>
+            <p>
+                Seasons greetings from Kerry's most exciting Christmas Markets. Fun, friendly, Christmas, Feel good. This festive experience is a real crowd pleaser. Get you into the Christmas spirit.
+            </p>
+        </div>
         <div id="festivities-div">Right</div>
         <div id="competition-div">Center</div>
     </section>
     <section>Map</section>
     <footer>Contact Info and Social Media links</footer>
+
+
+    <script src="https://kit.fontawesome.com/8b642d33d0.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
