Add images and style divs for festivities and competition pathways

--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
                 Seasons greetings from Kerry's most exciting Christmas Markets. Fun, friendly, Christmas, Feel good. This festive experience is a real crowd pleaser. Get you into the Christmas spirit.
             </p>
         </div>
-        <div id="festivities-div">Right</div>
-        <div id="competition-div">Center</div>
+        <div id="festivities-div">
+            <div class="writing-for-div">
+                <h3 class="pathway-header">We have something for everyone</h3>
+            </div>
+        </div>
+        <div id="competition-div">
+            <div class="writing-for-div">
+                <h3 class="pathway-header">Enter our Competition</h3>
+            </div>
+        </div>
     </section>
     <section>Map</section>
     <footer>Contact Info and Social Media links</footer>
