Update info-plus-pathway-section, which included adding more text and styles to div elements and also switching the image in the festivities-div

--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
                 25/11/2022 - 23/12/2022
             </h3>
             <p>
-                Seasons greetings from Kerry's most exciting Christmas Markets. Fun, friendly, Christmas, Feel good. This festive experience is a real crowd pleaser. Get you into the Christmas spirit.
-            </p>
+                Seasons greetings from Kerry's most exciting Christmas Markets. <br> <br> Legend has it that Elfis McTwinkles, one of Santa's retired elves, chose to live in the Magical town of Castleisland, and when he arrived he helped set up this market to make him feel at home every Christmas
         </div>
         <div id="festivities-div">
             <div class="writing-for-div">
                 <h3 class="pathway-header">We have something for everyone</h3>
+                <p class="pathway-paragraph">Visit Santa, Food, Fun, Decorations.Catering to all</p>
             </div>
         </div>
         <div id="competition-div">
-            <div class="writing-for-div">
+            <div class="writing-for-div" id="div1">
                 <h3 class="pathway-header">Enter our Competition</h3>
+                <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. <br> <br>
+                How would you like the chance to win a once in a lifetime opportunity for you and your family? <br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> A trip to the winter wonderland that is Lapland.</p>
             </div>
         </div>
     </section>
