--- a/index.html
+++ b/index.html
@@ -67,7 +67,34 @@
         <h3 id="find-us">COME FIND US! <i id="pin" class="fa-solid fa-map-pin"></i></h3>
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.1297208304095!2d-9.462652939540142!3d52.23072317355207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48452e05ad0e3d9d%3A0x8dab350c29436b49!2sCastleisland%20Co%20Operative%20Livestock%20Mart!5e0!3m2!1sen!2sie!4v1666042696701!5m2!1sen!2sie" width="100%" height="300"></iframe>
     </section>
-    <footer>Contact Info and Social Media links</footer>
+    <footer>
+        <div>
+            <h4>GET IN TOUCH</h4>
+            <p>Phone: <b>353 (0)66 71741123</b></p>
+            <p>Email: info@castleislandchristmasmarkets.ie</p>
+        </div>
+        <div>
+            <p>Address: Castleisland Mart Yard, <br> 
+            Castleisland, Co.Kerry
+            </p>
+        </div>
+        <div>
+            <p>© 2022 All rights reserved. Made by Jay O'Donoghue </p>
+        </div>
+        <div>
+            <h4>GET SOCIAL</h4>
+            <ul>
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                </li>
+                <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
 
     <script src="https://kit.fontawesome.com/8b642d33d0.js" crossorigin="anonymous"></script>
