Add styles to footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div id="competition-div">
-            <div class="writing-for-div" id="div1">
+            <div class="writing-for-div" id="colour-contrast-div">
                 <h3 class="pathway-header">Enter our Competition</h3>
                 <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. <br> <br>
                 How would you like the chance to win a once in a lifetime opportunity for you and your family? <br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> A trip to the winter wonderland that is Lapland.</p>
@@ -68,28 +68,28 @@
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2374.1297208304095!2d-9.462652939540142!3d52.23072317355207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48452e05ad0e3d9d%3A0x8dab350c29436b49!2sCastleisland%20Co%20Operative%20Livestock%20Mart!5e0!3m2!1sen!2sie!4v1666042696701!5m2!1sen!2sie" width="100%" height="300"></iframe>
     </section>
     <footer>
-        <div>
-            <h4>GET IN TOUCH</h4>
-            <p>Phone: <b>353 (0)66 71741123</b></p>
-            <p>Email: info@castleislandchristmasmarkets.ie</p>
+        <div id="copyright-container">
+            <p class="footer-text">© 2022 All rights reserved. Made by Jay O'Donoghue </p>
         </div>
-        <div>
-            <p>Address: Castleisland Mart Yard, <br> 
-            Castleisland, Co.Kerry
+        <div id="contact-info">
+            <h4 class="footer-text">GET IN TOUCH</h4>
+            <p class="footer-text">Phone: <b>353 (0)66 71741123</b> <br>
+            Email: <em id="email">info@castleislandchristmasmarkets.ie</em>
+            </p>
+            <p class="footer-text">Address: <b> Castleisland Mart Yard, <br> 
+            Castleisland, Co.Kerry </b>
             </p>
         </div>
-        <div>
-            <p>© 2022 All rights reserved. Made by Jay O'Donoghue </p>
-        </div>
-        <div>
-            <h4>GET SOCIAL</h4>
-            <ul>
-                <li>
+        <div id="social-div-container">
+            <h4 class="footer-text">FOLLOW US</h4>
+            <ul id="social-media">
+                <li class="footer-text">
                     <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
                 </li>
-                <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                <li class="footer-text">
+                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
                 </li>
-                <li>
+                <li class="footer-text">
                     <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
                 </li>
             </ul>
