Update style on footer to center items plus add open times to info div

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
     <section id="info-plus-pathway-section">
         <div id="info-div">
             <h1 class="info-div-headings">Castleisland Christmas Market</h1>
-            <h3 class="info-div-headings">
+            <h3 class="info-div-headings" id="dates">
                 <i class="fa-regular fa-calendar-days"></i>
-                25/11/2022 - 23/12/2022
+                25/11/2022 - 23/12/2022 
+            </h3>
+            <h3 id="open-times">
+                <strong>Monday – Wednesday:</strong> 12 noon – 9pm <br>
+                <strong>Thursday – Saturday:</strong> 11am – 10pm  <br>
+                <strong>Sunday:</strong> 10am – 8pm <br>
             </h3>
             <p>
                 Seasons greetings from Kerry's most exciting Christmas Markets. <br> <br> Legend has it that Elfis McTwinkles, one of Santa's retired elves, chose to live in the Magical town of Castleisland, and when he arrived he helped set up this market to make him feel at home every Christmas
@@ -73,7 +78,7 @@
         </div>
         <div id="contact-info">
             <h4 class="footer-text">GET IN TOUCH</h4>
-            <p class="footer-text">Phone: <b>353 (0)66 71741123</b> <br>
+            <p class="footer-text">Phone: <b>353 (0)66 7141123</b> <br>
             Email: <em id="email">info@castleislandchristmasmarkets.ie</em>
             </p>
             <p class="footer-text">Address: <b> Castleisland Mart Yard, <br> 
