Update font-family on footer

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
         <div id="copyright-container">
             <p class="footer-text">© 2022 All rights reserved. Made by Jay O'Donoghue </p>
         </div>
-        <div id="contact-info">
+        <div id="contact-info-container">
             <h4 class="footer-text">GET IN TOUCH</h4>
-            <p class="footer-text">Phone: <b>353 (0)66 7141123</b> <br>
-            Email: <em id="email">info@castleislandchristmasmarkets.ie</em>
+            <p class="footer-text"><span class="contact-details">Phone:</span> <b>353 (0)66 7141123</b> <br>
+            <span class="contact-details">Email:</span> <em id="email">info@castleislandchristmasmarkets.ie</em>
             </p>
-            <p class="footer-text">Address: <b> Castleisland Mart Yard, <br> 
+            <p class="footer-text"><span class="contact-details">Address:</span> <b> Castleisland Mart Yard, <br> 
             Castleisland, Co.Kerry </b>
             </p>
         </div>
         <div id="social-div-container">
-            <h4 class="footer-text">FOLLOW US</h4>
+            <h4 class="footer-text" id="follow-us">FOLLOW US</h4>
             <ul id="social-media">
                 <li class="footer-text">
                     <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
