Add more text to the info div and align text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <strong>Sunday:</strong> 10am – 8pm <br>
             </h3>
             <p>
-                Seasons greetings from Kerry's most exciting Christmas Markets. <br> <br> Legend has it that Elfis McTwinkles, one of Santa's retired elves, chose to live in the Magical town of Castleisland, and when he arrived he helped set up this market to make him feel at home every Christmas
+                Seasons greetings from Kerry's most exciting Christmas Markets. Legend has it that Elfis McTwinkles, one of Santa's retired elves, chose to live in the Magical town of Castleisland, and when he arrived he helped set up this market to make him feel at home every Christmas. This will be the markets twelfth year of spreading joy and festive spirit as it continues to grow. <br> <br> Castleisland Markets have had thousands of people from around the world wander through its stalls just to catch a glimpse of what is to offer. <br> <br> Come and see for yourself!</p>
         </div>
         <div id="festivities-div">
             <div class="writing-for-div">
