Add and style button to festivities and competition div on index page which links to respective pages

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div class="writing-for-div">
                 <h3 class="pathway-header">We have something for everyone</h3>
                 <p class="pathway-paragraph">Visit Santa, Food, Fun, Decorations.Catering to all</p>
+                <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
             </div>
         </div>
         <div id="competition-div">
@@ -65,6 +66,7 @@
                 <h3 class="pathway-header">Enter our Competition</h3>
                 <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. <br> <br>
                 How would you like the chance to win a once in a lifetime opportunity for you and your family? <br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> A trip to the winter wonderland that is Lapland.</p>
+                <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
             </div>
         </div>
     </section>
