Add text to the festivities div on index page and update competition div text

--- a/index.html
+++ b/index.html
@@ -51,21 +51,31 @@
                 <strong>Thursday – Saturday:</strong> 11am – 10pm  <br>
                 <strong>Sunday:</strong> 10am – 8pm <br>
             </h3>
-            <p>
-                Seasons greetings from Kerry's most exciting Christmas Markets. Legend has it that Elfis McTwinkles, one of Santa's retired elves, chose to live in the Magical town of Castleisland, and when he arrived he helped set up this market to make him feel at home every Christmas. This will be the markets twelfth year of spreading joy and festive spirit as it continues to grow. <br> <br> Castleisland Markets have had thousands of people from around the world wander through its stalls just to catch a glimpse of what is to offer. <br> <br> Come and see for yourself!</p>
+            <p class="info-p">
+                Seasons greetings from Kerry's most exciting Christmas Markets. Legend has it that Elfis McTwinkles, one of Santa's retired elves, chose to live in the Magical town of Castleisland, and when he arrived he helped set up this market to make him feel at home every Christmas. This will be the markets twelfth year of spreading joy and festive spirit as it continues to grow. 
+            </p>
+            <p class="info-p">
+                Castleisland Markets have had thousands of people from around the world wander through its stalls just to catch a glimpse of the magic. 
+            </p>
+            <p id="come-and-see-p">
+                <strong><em>Come and see for yourself!</em></strong>
+            </p>
         </div>
         <div id="festivities-div">
             <div class="writing-for-div">
                 <h3 class="pathway-header">We have something for everyone</h3>
-                <p class="pathway-paragraph">Visit Santa, Food, Fun, Decorations.Catering to all</p>
+                <p class="pathway-paragraph">
+                    <!--Snippets taken from guide-ireland-killarney-christmas-markets-->
+                    There are many stalls where you can buy local Irish produce, gourmet food, hot chocolate and hadmade decorations made by local artisans. You can even combat the cold season with a cup of mulled wine or cider!<br><br>
+                    In addition, Santa Claus comes every year to meet the children. He meets them in “Santa’s village”, which is set up especially for him in Castleisland. On top of all this we have cookie decorating, face paintnig and carollers. A festive atmosphere awaits, to the great joy of young and old alike!</p>
                 <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
             </div>
         </div>
         <div id="competition-div">
             <div class="writing-for-div" id="colour-contrast-div">
                 <h3 class="pathway-header">Enter our Competition</h3>
-                <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. <br> <br>
-                How would you like the chance to win a once in a lifetime opportunity for you and your family? <br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> A trip to the winter wonderland that is Lapland.</p>
+                <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. The Castleisland Christmas Markets want to make someone's Christmas very special  <br> <br>
+                How would you like the chance to win a once in a lifetime opportunity for you and your family?<br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> An all inclusive trip to the winter wonderland Lapland.</p>
                 <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
             </div>
         </div>
