Add media queries to footer and info-plus-pathway-section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p class="footer-text"><span class="contact-details">Phone:</span> <b>353 (0)66 7141123</b> <br>
             <span class="contact-details">Email:</span> <em id="email">info@castleislandchristmasmarkets.ie</em>
             </p>
-            <p class="footer-text"><span class="contact-details">Address:</span> <b> Castleisland Mart Yard, <br> 
+            <p class="footer-text" id="address-details">Address:<b> Castleisland Mart Yard, <br> 
             Castleisland, Co.Kerry </b>
             </p>
         </div>
