Fix footer by styling certain div'sto create better appearance

--- a/index.html
+++ b/index.html
@@ -86,16 +86,20 @@
     </section>
     <footer>
         <div id="copyright-container">
-            <p class="footer-text">© 2022 All rights reserved. Made by Jay O'Donoghue </p>
+            <p class="footer-text">© 2022 All rights reserved. <br> Made by Jay O'Donoghue </p>
         </div>
         <div id="contact-info-container">
+            <div id="contact-info-header">
             <h4 class="footer-text">GET IN TOUCH</h4>
-            <p class="footer-text"><span class="contact-details">Phone:</span> <b>353 (0)66 7141123</b> <br>
-            <span class="contact-details">Email:</span> <em id="email">info@castleislandchristmasmarkets.ie</em>
+            </div>
+            <div id="contact-info-details">
+            <p class="footer-text"><span class="contact-info">Phone:</span> <b>353 (0)66 7141123</b> <br>
+            <span class="contact-info">Email:</span> <em><strong>info@castleislandchristmasmarkets.ie</strong></em>
             </p>
-            <p class="footer-text" id="address-details">Address:<b> Castleisland Mart Yard, <br> 
+            <p class="footer-text" id="address-details"><span class="contact-info">Address:</span><b> Castleisland Mart Yard, <br> 
             Castleisland, Co.Kerry </b>
             </p>
+            </div>
         </div>
         <div id="social-div-container">
             <h4 class="footer-text" id="follow-us">FOLLOW US</h4>
