Add media queries to index page for sizes under 1420px

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                 <li class="border-right">
                     <a href="#">Festivities</a>
                 </li>
-                <li class="border-right">
-                    <a href="#">Gallery</a>
-                </li>
                 <li>
                     <a href="#">Competition</a>
                 </li>
@@ -66,8 +63,8 @@
                 <h3 class="pathway-header">We have something for everyone</h3>
                 <p class="pathway-paragraph">
                     <!--Snippets taken from guide-ireland-killarney-christmas-markets-->
-                    There are many stalls where you can buy local Irish produce, gourmet food, hot chocolate and hadmade decorations made by local artisans. You can even combat the cold season with a cup of mulled wine or cider!<br><br>
-                    In addition, Santa Claus comes every year to meet the children. He meets them in “Santa’s village”, which is set up especially for him in Castleisland. On top of all this we have cookie decorating, face paintnig and carollers. A festive atmosphere awaits, to the great joy of young and old alike!</p>
+                    There are many stalls where you can buy local Irish produce, gourmet food, hot chocolate and handmade decorations made by local artisans. You can even combat the cold season with a cup of mulled wine or cider!<br><br>
+                    In addition, Santa Claus comes every year to meet the children. He meets them in “Santa’s village”, which is set up especially for him in Castleisland. On top of all this we have cookie decorating, face painting and carollers. A festive atmosphere awaits, to the great joy of young and old alike!</p>
                 <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
             </div>
         </div>
