--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta name="keywords" content="christmas, market, christmas market, food, fun, family, decorations, santa, castleisland, kerry">
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
+    <!--Link to JS -->
+    <script src="script.js"></script>
+
     <title>Castleisland Christmas Markets</title>
 </head>
 <body>
@@ -17,6 +20,9 @@
             <img src="assets/images/castleisland-christmas-markets-logo.png" alt="Castleisland Christmas Market Logo" id="logo">
         </a>
         <nav>
+            <button class="hamburger" id="hamburger">
+            <i class="fas fa-bars"></i>
+            </button>
             <ul id="menu">
                 <li class="border-right">
                     <a href="index.html" class="active">Home</a>
