Fix header and navbar for responsivity

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 </head>
 <body>
     <header>
-        <a href="index.html" >
-            <img src="assets/images/castleisland-christmas-markets-logo.png" alt="Castleisland Christmas Market Logo" id="logo">
-        </a>
-        <nav>
-            <button class="hamburger" id="hamburger">
+        <nav class="navbar">
+            <a href="index.html" >
+                <img src="assets/images/castleisland-christmas-markets-logo.png" alt="Castleisland Christmas Market Logo" id="logo">
+            </a>
+            <a href="#" class="toggle-button"></a>
+                <span class="bar" ></span>
+                <span class="bar" ></span>
+                <span class="bar" ></span>
             <i class="fas fa-bars"></i>
             </button>
             <ul id="menu">
