Update hamburger menu

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="index.html" >
+            <a href="index.html" class="logo" >
                 <img src="assets/images/castleisland-christmas-markets-logo.png" alt="Castleisland Christmas Market Logo" id="logo">
             </a>
-            <a href="#" class="toggle-button"></a>
+            <a href="#" class="toggle-button">
                 <span class="bar" ></span>
                 <span class="bar" ></span>
                 <span class="bar" ></span>
-            <i class="fas fa-bars"></i>
-            </button>
+            </a>
             <ul id="menu">
                 <li class="border-right">
                     <a href="index.html" class="active">Home</a>
