Update styles to menu un er 600px

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!--Link to JS -->
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <title>Castleisland Christmas Markets</title>
 </head>
@@ -25,7 +25,7 @@
                 <span class="bar" ></span>
                 <span class="bar" ></span>
             </a>
-            <ul id="menu">
+            <ul class="menu">
                 <li class="border-right">
                     <a href="index.html" class="active">Home</a>
                 </li>
@@ -126,4 +126,5 @@
     <script src="https://kit.fontawesome.com/8b642d33d0.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
