Update find out more button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Christmas Markets open to the public located in Castleisland, Co. Kerry, Ireland">
     <meta name="keywords" content="christmas, market, christmas market, food, fun, family, decorations, santa, castleisland, kerry">
+
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -70,7 +71,9 @@
                     <!--Snippets taken from guide-ireland-killarney-christmas-markets-->
                     There are many stalls where you can buy local Irish produce, gourmet food, hot chocolate and handmade decorations made by local artisans. You can even combat the cold season with a cup of mulled wine or cider!<br><br>
                     In addition, Santa Claus comes every year to meet the children. He meets them in “Santa’s village”, which is set up especially for him in Castleisland. On top of all this we have cookie decorating, face painting and carollers. A festive atmosphere awaits, to the great joy of young and old alike!</p>
-                <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
+                    <div class="button">
+                        <a href="#">FIND OUT MORE</a>
+                    </div>
             </div>
         </div>
         <div id="competition-div">
@@ -78,7 +81,9 @@
                 <h3 class="pathway-header">Enter our Competition</h3>
                 <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. The Castleisland Christmas Markets want to make someone's Christmas very special  <br> <br>
                 How would you like the chance to win a once in a lifetime opportunity for you and your family?<br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> An all inclusive trip to the winter wonderland Lapland.</p>
-                <button type="button" class="button"><a href="#">FIND OUT MORE</a></button>
+                <div class="button">
+                    <a href="#">FIND OUT MORE</a>
+                </div>
             </div>
         </div>
     </section>
