--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         </div>
     </footer>
 
-
+    <!--Link to Font Awesome -->
     <script src="https://kit.fontawesome.com/8b642d33d0.js" crossorigin="anonymous"></script>
 
-</body>
+    <!--Link to JS -->
+    <script src="assets/js/script.js"></script>
 
-<!--Link to JS -->
-<script src="assets/js/script.js"></script>
+</body>
 
 </html>
