Fix the sizing of index-main-image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </nav>
     </header>
     <section id="main-image-outer">
-        <div id="index-main-image"></div>
+        <div id="index-main-image">
+        </div>
         <div id="image-slogan">
             <h2>A Christmas Experience like no other</h2>
         </div>
