Add santa-image to grid

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li class="border-right">
-                    <a href="#">Festivities</a>
+                    <a href="festivities.html">Festivities</a>
                 </li>
                 <li>
                     <a href="#">Competition</a>
