Add text to item 1 & 4

--- a/festivities.html
+++ b/festivities.html
@@ -38,10 +38,28 @@
     </header>
     <section>
         <div class="grid-container">
-            <div class="grid grid-text" id="item-one"></div>
+            <div class="grid grid-text" id="item-one">
+                <h3 class="grid-text-header">Visit Santa</h3>
+                <div class="grid-text-paragraphs">
+                    <p class="center"><b>Santa and his elves are back again for 2022!</b><br><br></p>
+                    <p>What better way to treat the kids than visiting Santa at Castleisland Christmas Market! Treat the little ones by paying a visit to the jolly man in red himself. <br> <br>
+                        As always Santa Claus will know some special information about your children and take some gorgeous photos to capture the magic of meeting Santa! <br> <br>
+                        Please note that coming to see Santa is free to all, however he is a busy man and is not guaranteed to have time to meet everyone, so please arrive nice and early to avoid dissapointment. Santa visiting experiences run from Thursday to Sundays and from 12pm to 7pm.
+                    </p>
+                </div>
+            </div>
             <div class="grid grid-images" id="item-two"></div>
             <div class="grid grid-images" id="item-three"></div>
-            <div class="grid grid-text" id="item-four"></div>
+            <div class="grid grid-text" id="item-four">
+                <h3 class="grid-text-header">Food & Drinks</h3>
+                <div class="grid-text-paragraphs">
+                    <p class="center"><b>Variety of choices between homegrown and European cuisine</b><br><br></p>
+                    <p>Food lovers rejoice as there is cheese of every kind but not only that, you can feast on a bratwurst, hot-dog or 100% Irish beef hamburger. Or they can indulge in French pastries, pretzels, confectionery, crêpes and waffles<br> <br>
+                        A hot chocolate is a real crowd pleaser especially in the cold weather. <br> <br>
+                        For the adults we also have a range of hot beverages that might tickle your fancy. Treat yourself to a mulled wine, hot cider or a hot whiskey/port. 
+                    </p>
+                </div>
+            </div>
             <div class="grid grid-text" id="item-five"></div>
             <div class="grid grid-images" id="item-six"></div>
             <div class="grid grid-images" id="item-seven"></div>
