Add remainder of text to grid on festivities page

--- a/festivities.html
+++ b/festivities.html
@@ -10,6 +10,8 @@
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+
     <title>Castleisland Christmas Markets</title>
 </head>
 <body>
@@ -60,11 +62,38 @@
                     </p>
                 </div>
             </div>
-            <div class="grid grid-text" id="item-five"></div>
+            <div class="grid grid-text" id="item-five">
+                <h3 class="grid-text-header">Handcrafted Decorations</h3>
+                <div class="grid-text-paragraphs">
+                    <p class="center"><b>Add a personal touch to a gift this season</b><br><br></p>
+                    <p>With some of the finest craftspeople from the country we are sure you will find that perfect gift for someone special <br> <br>
+                        The market has numerous stall full of unique handmade christmas ornaments from baubles, miniture figurines and dolls to list just a few.<br> <br>
+                        Every stall takes cash and card so do not fret about having to run to the atm once you see set your eyes on a piece of art from our talented merchants.  
+                    </p>
+                </div>
+            </div>
             <div class="grid grid-images" id="item-six"></div>
             <div class="grid grid-images" id="item-seven"></div>
-            <div class="grid grid-text" id="item-eight"></div>
-            <div class="grid grid-text" id="item-nine"></div>
+            <div class="grid grid-text" id="item-eight">
+                <h3 class="grid-text-header">Games & Carolling</h3>
+                <div class="grid-text-paragraphs">
+                    <p class="center"><b>Have some fun with the family and enjoy our carnival games or listen to our amazing choirs. </b><br><br></p>
+                    <p>The market has a range of stalls where you can test out your skills with the chance of winning a variety of items such as teddys, sweets and cool gadgets. <br> <br>
+                        Or come visit on a Friday evening after 5pm where there will be an almalgamation of schools performing Christmas carols, which is sure to put everyone in the festive spirit.
+                        The gorgeous singers are from the local schools around the area and the diversity in age ranges from 12 up to 18. These are one talented group of pupils and not to be missed.
+                    </p>
+                </div>
+            </div>
+            <div class="grid grid-text" id="item-nine">
+                <h3 class="grid-text-header">Cookie decorating & Face painting</h3>
+                <div class="grid-text-paragraphs">
+                    <p class="center"><b>Let the children express themselves whether it be how they design their cookie or what character they get painted on their face.</b><br><br></p>
+                    <p> In our Cookie Decoration workshop the children get to help Mrs. Claus decorate some home baked sugar cookies. There are a plethora of icings and toppings to chose from. These workshops are available all week from 6pm to 7pm and cost €5 per child. 
+                        Please ring the number or email the email address below for more details. <br> <br>
+                        As for the face painting, we have gifted artists on hand to transform your children into animals, superheroes, princesses, you name it. It is sure to add a bit of colour and a smile to your childs face.  
+                    </p>
+                </div>
+            </div>
             <div class="grid grid-images" id="item-ten"></div>
           </div>
     </section>
