--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!--Link to CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+
     <title>Castleisland Christmas Markets</title>
 </head>
 <body>
@@ -73,7 +75,7 @@
                     There are many stalls where you can buy local Irish produce, gourmet food, hot chocolate and handmade decorations made by local artisans. You can even combat the cold season with a cup of mulled wine or cider!<br><br>
                     In addition, Santa Claus comes every year to meet the children. He meets them in “Santa’s village”, which is set up especially for him in Castleisland. On top of all this we have cookie decorating, face painting and carollers. A festive atmosphere awaits, to the great joy of young and old alike!</p>
                     <div class="button">
-                        <a href="#">FIND OUT MORE</a>
+                        <a href="festivities.html">FIND OUT MORE</a>
                     </div>
             </div>
         </div>
