Add form to competition page

--- a/festivities.html
+++ b/festivities.html
@@ -33,7 +33,7 @@
                     <a href="festivities.html" class="active">Festivities</a>
                 </li>
                 <li>
-                    <a href="#">Competition</a>
+                    <a href="competition.html">Competition</a>
                 </li>
             </ul>
         </nav>
