--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="festivities.html">Festivities</a>
                 </li>
                 <li>
-                    <a href="#">Competition</a>
+                    <a href="competition.html">Competition</a>
                 </li>
             </ul>
         </nav>
@@ -85,7 +85,7 @@
                 <p class="pathway-paragraph">If you are dreaming of a white Christmas, you've come to the right place. The Castleisland Christmas Markets want to make someone's Christmas very special  <br> <br>
                 How would you like the chance to win a once in a lifetime opportunity for you and your family?<br> <br> <b>HO-HO-HOLIDAY TO REMEMBER!</b> <br> <br> An all inclusive trip to the winter wonderland Lapland.</p>
                 <div class="button">
-                    <a href="#">FIND OUT MORE</a>
+                    <a href="competition.html">FIND OUT MORE</a>
                 </div>
             </div>
         </div>
